updated TaskController.php add method for get all filters
fix docs description

update README.md
