# public/docs/openapi.yaml
@@ -26,11 +26,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: alysson00@example.net
+                  example: brianne.nolan@example.org
                 password:
                   type: string
                   description: ''
-                  example: "ZF%9xjZN@'ivaE7p=U"
+                  example: "y.%N.a'K1;*vBY"
               required:
                 - email
                 - password
@@ -54,15 +54,15 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: uhnre
+                  example: xaqenhtfvcun
                 email:
                   type: string
                   description: 'Must be a valid email address. Must not be greater than 255 characters.'
-                  example: elisabeth.schmitt@example.com
+                  example: dina12@example.net
                 password:
                   type: string
                   description: 'Must be at least 6 characters.'
-                  example: 'v?z^`:$w4jvF29i'
+                  example: ',5DukO!:9pkE%01'
               required:
                 - name
                 - email
@@ -103,7 +103,7 @@ paths:
                 type: object
                 example:
                   status: success
-                  message: Ok
+                  message: 'Tasks List.'
                   data:
                     current_page: 1
                     data:
@@ -146,7 +146,7 @@ paths:
                     example: success
                   message:
                     type: string
-                    example: Ok
+                    example: 'Tasks List.'
                   data:
                     type: object
                     properties:
@@ -298,7 +298,7 @@ paths:
                 type: object
                 example:
                   status: success
-                  message: ok
+                  message: 'Task created successful!'
                   task:
                     user_id: '11'
                     title: 'Task title'
@@ -314,7 +314,7 @@ paths:
                     example: success
                   message:
                     type: string
-                    example: ok
+                    example: 'Task created successful!'
                   task:
                     type: object
                     properties:
@@ -443,7 +443,7 @@ paths:
                 type: object
                 example:
                   status: success
-                  message: ok
+                  message: 'Task with self tree subtasks'
                   task:
                     id: 203
                     user_id: 11
@@ -485,7 +485,7 @@ paths:
                     example: success
                   message:
                     type: string
-                    example: ok
+                    example: 'Task with self tree subtasks'
                   task:
                     type: object
                     properties:
@@ -758,14 +758,14 @@ paths:
                 type: object
                 example:
                   status: success
-                  message: 'Task delete successfully!'
+                  message: 'Task deleted successfully!'
                 properties:
                   status:
                     type: string
                     example: success
                   message:
                     type: string
-                    example: 'Task delete successfully!'
+                    example: 'Task deleted successfully!'
         400:
           description: ''
           content:
@@ -818,11 +818,164 @@ paths:
         in: path
         name: id
         description: 'The ID of the task.'
-        example: 1
+        example: 6
         required: true
         schema:
           type: integer
-  /api/tasks/ajaxFilter:
+  /api/tasks/filters:
+    post:
+      summary: 'Show Task filters'
+      operationId: showTaskFilters
+      description: 'Method for Ajax filtering task list'
+      parameters: []
+      responses:
+        200:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  select:
+                    page_size:
+                      -
+                        id: 10
+                        label: 10
+                      -
+                        id: 20
+                        label: 20
+                      -
+                        id: 30
+                        label: 30
+                      -
+                        id: 40
+                        label: 40
+                      -
+                        id: 50
+                        label: 50
+                    status:
+                      -
+                        id: 1
+                        label: Todo
+                      -
+                        id: 2
+                        label: Done
+                    priority:
+                      -
+                        id: 1
+                        label: 'for future'
+                      -
+                        id: 2
+                        label: Low
+                      -
+                        id: 3
+                        label: Middle
+                      -
+                        id: 4
+                        label: High
+                      -
+                        id: 5
+                        label: Urgently
+                  sorting:
+                    - created_at
+                    - priority
+                  text:
+                    - title
+                    - description
+                properties:
+                  select:
+                    type: object
+                    properties:
+                      page_size:
+                        type: array
+                        example:
+                          -
+                            id: 10
+                            label: 10
+                          -
+                            id: 20
+                            label: 20
+                          -
+                            id: 30
+                            label: 30
+                          -
+                            id: 40
+                            label: 40
+                          -
+                            id: 50
+                            label: 50
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              example: 10
+                            label:
+                              type: integer
+                              example: 10
+                      status:
+                        type: array
+                        example:
+                          -
+                            id: 1
+                            label: Todo
+                          -
+                            id: 2
+                            label: Done
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              example: 1
+                            label:
+                              type: string
+                              example: Todo
+                      priority:
+                        type: array
+                        example:
+                          -
+                            id: 1
+                            label: 'for future'
+                          -
+                            id: 2
+                            label: Low
+                          -
+                            id: 3
+                            label: Middle
+                          -
+                            id: 4
+                            label: High
+                          -
+                            id: 5
+                            label: Urgently
+                        items:
+                          type: object
+                          properties:
+                            id:
+                              type: integer
+                              example: 1
+                            label:
+                              type: string
+                              example: 'for future'
+                  sorting:
+                    type: array
+                    example:
+                      - created_at
+                      - priority
+                    items:
+                      type: string
+                  text:
+                    type: array
+                    example:
+                      - title
+                      - description
+                    items:
+                      type: string
+      tags:
+        - 'Task Management'
+      security: []
+  /api/tasks/ajax_filter:
     post:
       summary: 'Display a listing tasks with filters'
       operationId: displayAListingTasksWithFilters
@@ -935,7 +1088,7 @@ paths:
         in: path
         name: task_id
         description: 'The ID of the task.'
-        example: 1
+        example: 4
         required: true
         schema:
           type: integer
